fix: fixed overlapping of header with z index

--- a/src/Components/Header/styles.css
+++ b/src/Components/Header/styles.css
@@ -13,6 +13,7 @@
 	top: 0;
 	left: 0;
 	grid-area: header-area;
+	z-index: 1;
 }
 
 .header-main {
